# BotGeminiVoice

./: .env.example  .replit  README.md  main.py  pyproject.toml  replit.md
bot/: code_analyzer.py  educational_content.py  gemini_assistant.py  telegram_bot.py  voice_processor.py
utils/: audio_handler.py  code_formatter.py  logger.py
